--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postcss-multiple-themes"
   ],
   "scripts": {
+    "preinstall": "cd ./example && npm i && npm run build",
     "test": "jest --coverage && eslint .",
+    "posttest": "cd ./example &&  npm run deploy",
     "semantic-release": "semantic-release"
   },
   "author": "马琪斌 <maqi1520@163.com>",
