--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,5 +37,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
+      - name: build example
+        run: cd example
+        run: npm i 
+        run: npm run build
       - name: Run unit tests
         run: npx jest
