--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,10 @@ jobs:
         working-directory: example
         run: npm run build
       - name: Deploy
-        working-directory: example
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.MGITHUB_TOKEN }}
-          publish_dir: ./dist
+          publish_dir: ./example/dist
       - name: Run tests
         run: yarn test
   short:
